<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:text="@string/salariobruto"
            android:gravity="center"
            android:background="@color/teal_700"
            android:layout_height="wrap_content"></TextView>


        <EditText
            android:id="@+id/txtSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="2dp"></EditText>

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/NumDependentes">

        </TextView>

        <EditText

            android:id="@+id/numDependentes"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="match_parent">

        </EditText>

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/teal_700"
            android:text="@string/saude">
        </TextView>
           <Spinner
               android:padding="12dp"
               android:id="@+id/spinner"
               android:spinnerMode="dialog"
               android:layout_gravity="center"
               android:entries="@array/planos"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
           </Spinner>

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/teal_700"
            android:text="@string/VT">
        </TextView>
        <RadioGroup
            android:id="@+id/rgVt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/simVt"
            android:text="@string/sim">

        </RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/naoVt"
            android:text="@string/nao">

        </RadioButton>
        </RadioGroup>

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/teal_700"
            android:text="@string/VaAlimentação">
        </TextView>
        <RadioGroup
            android:id="@+id/rgVa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/simVa"
                android:text="@string/sim">


            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/naoVa"
                android:text="@string/nao">

            </RadioButton>
        </RadioGroup>

        <TextView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/teal_700"

            android:text="@string/VaRefeicao">
        </TextView>
        <RadioGroup
            android:id="@+id/rgVr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/simVr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sim">

            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/naoVr"
                android:text="@string/nao">

            </RadioButton>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:text="@string/calcular"
            android:layout_weight="1"

            android:id="@+id/enviar"
            android:layout_height="wrap_content"></Button>

        <Button
            android:layout_width="match_parent"
            android:text="@string/limpar"
            android:layout_weight="2"
            android:id="@+id/limpar"
            android:layout_height="wrap_content"></Button>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtexResult"
            android:layout_height="match_parent">

        </EditText>


    </LinearLayout>

</ScrollView>